Responsive images, width/height, and meta description for works-in-progress, tattoo-flash, and index pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8"/>
 <title>Works</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="description" content="A portfolio of original artwork by Kealohi Wean. Drawings, paintings, and illustrations exploring desire, nostalgia, identity, and more."/>
 <style>
     html {
       font-size: clamp(12px, 1vw, 18px); /* Adjust font size based on viewport width */
@@ -493,81 +494,130 @@
 <div class="gallery-container">
 <div class="gallery">
 <div class="gallery-item" style="--rotate: 2deg;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Lifelong Desire//Gluttony" src="Lifelong Desire.webp" loading="lazy" data-caption="June 2025, Graphite/Colored Pencil on Sketch Paper, 9”x12”<br>Thumper knows what’s tasty, that’s a fact I’ve known all my life.<br>(Desire, Hunger, Gluttony, Fetishization, Carnality, Nostalgia)" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-Lifelong-Desire.webp">
+            <img alt="Lifelong Desire//Gluttony" src="desktop-Lifelong-Desire.webp" loading="lazy" data-caption="June 2025, Graphite/Colored Pencil on Sketch Paper, 9”x12”<br>Thumper knows what’s tasty, that’s a fact I’ve known all my life.<br>(Desire, Hunger, Gluttony, Fetishization, Carnality, Nostalgia)" width="1600" height="1200" />
+</picture>
 <div class="overlay">Lifelong Desire//Gluttony</div>
 </div>
 <div class="gallery-item" style="--rotate: 3deg;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Mark of the Beast" src="Mark of the beast.webp" loading="lazy" data-caption="March 2025, Oil pencil/ink/graphite on Mixed Media, 14”x17”<br><em>Depicts from bottom middle, counter-clockwise: Mr. Beast, Joe Rogan, Jeff Bezos, Mark Zuckerberg, Logan Paul, Andrew Tate, Elon Musk<br>The harbingers of the end of the world, the beast with seven heads - referencing the style of the Skibidi Toilet web series (surveillance, conflict, conformity, Resistance)</em>" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-Mark-of-the-beast.webp">
+            <img alt="Mark of the Beast" src="desktop-Mark-of-the-beast.webp" loading="lazy" data-caption="March 2025, Oil pencil/ink/graphite on Mixed Media, 14”x17”<br><em>Depicts from bottom middle, counter-clockwise: Mr. Beast, Joe Rogan, Jeff Bezos, Mark Zuckerberg, Logan Paul, Andrew Tate, Elon Musk<br>The harbingers of the end of the world, the beast with seven heads - referencing the style of the Skibidi Toilet web series (surveillance, conflict, conformity, Resistance)</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Mark of the Beast</div>
 </div>
 <div class="gallery-item" style="--rotate: -2deg;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="God’s Favorite Little Schemers" src="Schemers.webp" loading="lazy" data-caption="April 2024, Graphite/ink on Mixed Media, 7”x10”<br><em>What having a best friend feels like :]</em>" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-Schemers.webp">
+            <img alt="God’s Favorite Little Schemers" src="desktop-Schemers.webp" loading="lazy" data-caption="April 2024, Graphite/ink on Mixed Media, 7”x10”<br><em>What having a best friend feels like :]</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Schemers</div>
 </div>
 <div class="gallery-item" style="--rotate: 1deg;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Equivalent Exchange" src="equivalent exchange.webp" loading="lazy" data-caption="February 2024, Graphite on Mixed Media, 9”x12”<br><em>I’ll give what I get and I’ll get what I give.<br>(Desire, Gluttony, Grief, Nostalgia - They spread like a rash. Quiet, calm, Communication, ease… where are they?)</em>" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-equivalent-exchange.webp">
+            <img alt="Equivalent Exchange" src="desktop-equivalent-exchange.webp" loading="lazy" data-caption="February 2024, Graphite on Mixed Media, 9”x12”<br><em>I’ll give what I get and I’ll get what I give.<br>(Desire, Gluttony, Grief, Nostalgia - They spread like a rash. Quiet, calm, Communication, ease… where are they?)</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Equivalent Exchange</div>
 </div>
 <div class="gallery-item" style="--rotate: -4deg; position: relative; top: -25px;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Ain’t That Just the Way" src="aint-that-just-the-way.webp" loading="lazy" data-caption="January 2024, Ballpoint Pen on Mixed Media, 14”x17”<br><em>It may still be bleeding, but life goes on.<br>(Grief, Recovery, Regression, Gutted like a fish)</em>" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-aint-that-just-the-way.webp">
+            <img alt="Ain’t That Just the Way" src="desktop-aint-that-just-the-way.webp" loading="lazy" data-caption="January 2024, Ballpoint Pen on Mixed Media, 14”x17”<br><em>It may still be bleeding, but life goes on.<br>(Grief, Recovery, Regression, Gutted like a fish)</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Ain’t That Just the Way</div>
 </div>
 <div class="gallery-item" style="--rotate: 5deg; position: relative; top: -50px;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Yeowch!" src="yeowch!.webp" loading="lazy" data-caption="January 2024, Graphite/Ink on Mixed Media, 14”x17”<br><em>Had you been looking where you were going…<br>(Change, Fear, Extremely Stoppable Force meets Very Painful Object)</em>" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-yeowch!.webp">
+            <img alt="Yeowch!" src="desktop-yeowch!.webp" loading="lazy" data-caption="January 2024, Graphite/Ink on Mixed Media, 14”x17”<br><em>Had you been looking where you were going…<br>(Change, Fear, Extremely Stoppable Force meets Very Painful Object)</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Yeowch!</div>
 </div>
 <div class="gallery-item" style="--rotate: -3deg; position: relative; top: -50px;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Bow Wow" src="bow wow.webp" loading="lazy" data-caption="September 2023, Graphite/Ink on Mixed Media, 7”x10”<br>Don’t you worry, little pup, they’re watching over you in the quiet night. Look at the stars." />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-bow-wow.webp">
+            <img alt="Bow Wow" src="desktop-bow-wow.webp" loading="lazy" data-caption="September 2023, Graphite/Ink on Mixed Media, 7”x10”<br>Don’t you worry, little pup, they’re watching over you in the quiet night. Look at the stars." width="1600" height="1200" />
+</picture>
 <div class="overlay">Bow Wow</div>
 </div>
 <div class="gallery-item" style="--rotate: 2deg;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Smothered" src="smothered.webp" loading="lazy" data-caption="August 2023, Graphite/Ink on Mixed Media, 5.5”x8.5”<br><em>Do you want it? Or is it killing you?<br>(Desire, Desperation, Obsession)</em>" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-smothered.webp">
+            <img alt="Smothered" src="desktop-smothered.webp" loading="lazy" data-caption="August 2023, Graphite/Ink on Mixed Media, 5.5”x8.5”<br><em>Do you want it? Or is it killing you?<br>(Desire, Desperation, Obsession)</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Smothered</div>
 </div>
 <div class="gallery-item" style="--rotate: -1deg; position: relative; top: -80px;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Call of the Ocean" src="call of the ocean.webp" loading="lazy" data-caption="August 2023, Graphite on Mixed media, 5.5”x8.5”<br><em>Can’t you hear it? Or is it just me?<br>(Return to the Earth, Return to the old gods, Return to yourself)</em>" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-call-of-the-ocean.webp">
+            <img alt="Call of the Ocean" src="desktop-call-of-the-ocean.webp" loading="lazy" data-caption="August 2023, Graphite on Mixed media, 5.5”x8.5”<br><em>Can’t you hear it? Or is it just me?<br>(Return to the Earth, Return to the old gods, Return to yourself)</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Call of the Ocean</div>
 </div>
 <div class="gallery-item" style="--rotate: 4deg; position: relative; top: -130px;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Pissing Contest" src="pissing contest.webp" loading="lazy" data-caption="July 2023, Pastel/Colored Pencil/Glitter Mod Podge, 9”x12”<br><em>Will you accept his challenge? ;]<br>(It’s nature’s way, do you have the balls? Do you know your natural state? Have you yet seen what you’re meant to be?)</em>" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-pissing-contest.webp">
+            <img alt="Pissing Contest" src="desktop-pissing-contest.webp" loading="lazy" data-caption="July 2023, Pastel/Colored Pencil/Glitter Mod Podge, 9”x12”<br><em>Will you accept his challenge? ;]<br>(It’s nature’s way, do you have the balls? Do you know your natural state? Have you yet seen what you’re meant to be?)</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Pissing Contest</div>
 </div>
 <div class="gallery-item" style="--rotate: -5deg; position: relative; top: -50px;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Parched" src="parched.webp" loading="lazy" data-caption="May 2023, Graphite/Colored Pencil/Ink on Mixed Media, 5.5”x8.5”<br><em>When you’ve waited so long for a sip, what’s a little longer? What could go wrong?<br>(Desire, Longing, Limerance, Desperation)</em>" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-parched.webp">
+            <img alt="Parched" src="desktop-parched.webp" loading="lazy" data-caption="May 2023, Graphite/Colored Pencil/Ink on Mixed Media, 5.5”x8.5”<br><em>When you’ve waited so long for a sip, what’s a little longer? What could go wrong?<br>(Desire, Longing, Limerance, Desperation)</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Parched</div>
 </div>
 <div class="gallery-item" style="--rotate: 3deg; position: relative; top: -50px;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Big Boys Cry Too" src="big boys cry too.webp" loading="lazy" data-caption="May 2023, Graphite/Ink on Mixed Media, 5.5”x8.5”<br><em>It’s dark out there. I hope he makes it where he’s going.<br>(Identity, Gender, Grief, Hope, Change, and Transition)</em>" />
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-big-boys-cry-too.webp">
+            <img alt="Big Boys Cry Too" src="desktop-big-boys-cry-too.webp" loading="lazy" data-caption="May 2023, Graphite/Ink on Mixed Media, 5.5”x8.5”<br><em>It’s dark out there. I hope he makes it where he’s going.<br>(Identity, Gender, Grief, Hope, Change, and Transition)</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Big Boys Cry Too</div>
 </div>
 <div class="gallery-item" style="--rotate: 2deg; position: relative; top: -90px;">
 <a href="works-in-progress.html">
-<img alt="Works in Progress" src="process 6.webp" loading="lazy" data-caption="Works in Progress">
-<div class="overlay">Works in Progress</div>
+    <picture>
+        <source media="(max-width: 600px)" srcset="mobile-process-6.webp">
+        <img alt="Works in Progress" src="desktop-process-6.webp" loading="lazy" data-caption="Works in Progress" width="1600" height="1200">
+    </picture>
+    <div class="overlay">Works in Progress</div>
 </a>
 </div>
 <div class="gallery-item" style="--rotate: -2deg; position: relative; top: -170px;" onclick="openLightbox(this.querySelector('img'))">
-<img alt="Exponential Growth" src="exponential growth.webp" loading="lazy" data-caption="January 2023, Digital Drawing in Procreate<br><em>Sometimes, you have to tie the tooth to the door to grow something new. <br> (Control, Autonomy, Identity, Physicality, Transgenderism)</em>"/>
-
-
+<picture>
+        <source media="(max-width: 600px)" srcset="mobile-exponential-growth.webp">
+            <img alt="Exponential Growth" src="desktop-exponential-growth.webp" loading="lazy" data-caption="January 2023, Digital Drawing in Procreate<br><em>Sometimes, you have to tie the tooth to the door to grow something new. <br> (Control, Autonomy, Identity, Physicality, Transgenderism)</em>" width="1600" height="1200" />
+</picture>
 <div class="overlay">Exponential Growth</div>
 </div>
 <div class="gallery-item" style="--rotate: -3deg; position: relative; top: -50px;">
 <a href="works-on-skin.html">
-<img alt="Works on Skin" src="e5fdf3a2-7f98-4108-9ef1-9dac2e18b817_rw_1200.webp" loading="lazy" data-caption="Works on Skin">
-<div class="overlay">Works on Skin</div>
+    <picture>
+        <source media="(max-width: 600px)" srcset="mobile-e5fdf3a2-7f98-4108-9ef1-9dac2e18b817_rw_1200.webp">
+        <img alt="Works on Skin" src="desktop-e5fdf3a2-7f98-4108-9ef1-9dac2e18b817_rw_1200.webp" loading="lazy" data-caption="Works on Skin" width="1600" height="1200">
+    </picture>
+    <div class="overlay">Works on Skin</div>
 </a>
 </div>
 <div class="gallery-item" style="--rotate: 1deg; position: relative; top: -775px;">
 <a href="tattoo-flash.html">
-<img alt="Collected Tattoo Flash" src="a17f3d97-768f-4133-b19d-54cf72a95207_rw_1920.webp" loading="lazy" data-caption="Collected Tattoo Flash">
-<div class="overlay">Collected Tattoo Flash</div>
+    <picture>
+        <source media="(max-width: 600px)" srcset="mobile-a17f3d97-768f-4133-b19d-54cf72a95207_rw_1920.webp">
+        <img alt="Collected Tattoo Flash" src="desktop-a17f3d97-768f-4133-b19d-54cf72a95207_rw_1920.webp" loading="lazy" data-caption="Collected Tattoo Flash" width="1600" height="1200">
+    </picture>
+    <div class="overlay">Collected Tattoo Flash</div>
 </a>
 </div>
 <div class="gallery-item" style="--rotate: 3deg; position: relative; top: -900px; left: 900px;">
 <a href="bits.html">
-<img alt="Bits and Bobs" src="bits11.webp" loading="lazy" data-caption="Bits and Bobs">
-<div class="overlay">Bits and Bobs</div>
+    <picture>
+        <source media="(max-width: 600px)" srcset="mobile-bits11.webp">
+        <img alt="Bits and Bobs" src="desktop-bits11.webp" loading="lazy" data-caption="Bits and Bobs" width="1600" height="1200">
+    </picture>
+    <div class="overlay">Bits and Bobs</div>
 </a>
 </div>
 </div>
