Fix robots.txt for SEO and remove lazy loading from main image for LCP improvement

--- a/works-in-progress.html
+++ b/works-in-progress.html
@@ -264,7 +264,7 @@ z-index: 10;
   <div class="image-container">
   <picture>
     <source media="(max-width: 600px)" srcset="mobile-studio-static.webp">
-    <img src="desktop-studio-static.webp" alt="Studio Static" loading="lazy" width="1600" height="1200">
+  <img src="desktop-studio-static.webp" alt="Studio Static" width="1600" height="1200">
   </picture>
   <div class="overlay">
     <picture>
