--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         #lightbox-caption {
             margin-top: 1rem;
             color: #e6ff8c;
-            font-size: clamp(0.8rem, 2vw, 2rem); /* Responsive scaling for all screens */
+            font-size: clamp(0.8rem, 2vw, 1rem); /* Responsive scaling for all screens */
             text-align: center;
             max-width: 90%;
             padding: 0 1rem;
@@ -491,6 +491,8 @@
  ▀███▀███▀   ▀██████▀    ███    ███   ███   ▀█▀  ▄████████▀  
                          ███    ███   ▀                      
  </pre>
+<!-- Random image row -->
+<div id="random-images" style="margin: 2rem 0;"></div>
 <div class="gallery-container">
 <div class="gallery">
 <div class="gallery-item" style="--rotate: 2deg;" onclick="openLightbox(this.querySelector('img'))">
@@ -625,6 +627,12 @@
 
 <!-- Add custom Lightbox functionality -->
 <script>
+        // Add random images on DOMContentLoaded
+        document.addEventListener('DOMContentLoaded', function() {
+            if (typeof createRandomImagesRow === 'function') {
+                createRandomImagesRow();
+            }
+        });
     // Restore lightbox functionality
     let currentIndex = 0;
     const galleryItems = document.querySelectorAll('.gallery-item img');
@@ -733,7 +741,6 @@
             });
         });
     });
-</script>
 </script>
 
 <!-- Add Lightbox modal structure -->
