fix: match random image row flexbox layout to about.html for mobile consistency

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                          ███    ███   ▀                      
  </pre>
 <!-- Random image row -->
-<div id="random-images" style="margin: 2rem 0;"></div>
+<div id="random-images" style="display: flex; justify-content: space-between; align-items: center; margin: 2rem 0; overflow: hidden; width: 100%; position: relative; left: 0;"></div>
 <div class="gallery-container">
 <div class="gallery">
 <div class="gallery-item" style="--rotate: 2deg;" onclick="openLightbox(this.querySelector('img'))">
