fix: carousel images scale with viewport units to prevent cutoff on desktop

--- a/works-in-progress.html
+++ b/works-in-progress.html
@@ -200,11 +200,13 @@ z-index: 10;
   }
 
   #carousel img {
-    max-width: 90%;
-    max-height: 80%;
-    width: auto; /* Ensure consistent scaling */
-    height: auto; /* Maintain aspect ratio */
-    object-fit: contain; /* Scale smaller images to match larger ones */
+    max-width: 90vw;
+    max-height: 80vh;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+    display: block;
+    margin: 0 auto;
   }
 
   #carousel-close {
