Increase bottom spacing on about page

--- a/about.html
+++ b/about.html
@@ -138,6 +138,7 @@
       transform: scale(1);
       transform-origin: center top;
       padding: 1rem; /* ensure horizontal padding on small screens */
+      padding-bottom: clamp(24px, 4vh, 64px); /* slightly larger bottom gap */
       box-sizing: border-box;
       overflow-wrap: anywhere; /* allow long words to break */
     }
