Unify nav: add site.css; link from pages; ensure modals overlay nav

--- a/about.html
+++ b/about.html
@@ -182,6 +182,7 @@
     /* Keep columns side-by-side on all screen sizes (no stacking) */
   </style>
 </head>
+<link rel="stylesheet" href="site.css">
 <body>
   <nav>
     <a href="about.html">About</a>
