--- a/contact.html
+++ b/contact.html
@@ -227,6 +227,7 @@
     }
   </style>
 </head>
+<link rel="stylesheet" href="site.css">
 <body>
   <nav>
     <a href="about.html" style="color: #e6ff8c; text-decoration: none;">About</a>
