--- a/bits.html
+++ b/bits.html
@@ -183,6 +183,7 @@
   </style>
   <link rel="stylesheet" href="Stacked-Card-Slider-Plugin-paperstack/paperstack.css" />
 </head>
+<link rel="stylesheet" href="site.css">
 <body>
   <nav>
     <a href="about.html">About</a>
